# imperial

./: .gitignore  CMakeLists.txt  README.md  package.sh
.github/workflows/: release.yml
Source/: CabinetStage.cpp  CabinetStage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PowerAmpStage.cpp  PowerAmpStage.h  PreampStage.cpp  PreampStage.h
docs/: architecture.md  building.md  controls.md  installation.md  ir-loader.md
installer/: distribution.xml
